--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
                 </div>
 
                 <!-- Slideshow -->
-                <div class="carousel-trending d-flex gap-20 overflow-hidden">
+                <div class="carousel-trending d-flex gap-20 overflow-auto">
                     <!-- 1 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -383,7 +383,7 @@
                     </div>
 
                     <!-- 2 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -474,7 +474,7 @@
                     </div>
 
                     <!-- 3 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -565,7 +565,7 @@
                     </div>
 
                     <!-- 4 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -656,7 +656,7 @@
                     </div>
 
                     <!-- 5 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -747,7 +747,7 @@
                     </div>
 
                     <!-- 6 -->
-                    <div class="card-trending col-2 col-md-3 col-xl-4">
+                    <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -908,7 +908,7 @@
                 <!-- Slideshow -->
                 <div class="carousel-arrivals d-flex gap-20 overflow-hidden">
                     <!-- 1 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -999,7 +999,7 @@
                     </div>
 
                     <!-- 2 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1090,7 +1090,7 @@
                     </div>
 
                     <!-- 3 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1181,7 +1181,7 @@
                     </div>
 
                     <!-- 4 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1272,7 +1272,7 @@
                     </div>
 
                     <!-- 5 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1363,7 +1363,7 @@
                     </div>
 
                     <!-- 6 -->
-                    <div class="card-arrivals col-2 col-md-3 col-xl-4">
+                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
