--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 </div>
 
                 <!-- Slideshow -->
-                <div class="carousel-trending d-flex gap-20 overflow-auto">
+                <div class="carousel-trending d-flex gap-20 overflow-hidden">
                     <!-- 1 -->
                     <div class="card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-20">
                         <!-- Img -->
