--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
                 <!-- slideshow -->
                 <div class="carousel-feedback mt-21 d-flex gap-2 gap-md-30 overflow-hidden">
                     <!-- 1 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-1.svg" alt="" draggable="false">
                         </div>
@@ -1500,7 +1500,7 @@
                     </div>
 
                     <!-- 2 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-2.svg" alt="" draggable="false">
                         </div>
@@ -1524,7 +1524,7 @@
                     </div>
 
                     <!-- 3 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-3.svg" alt="" draggable="false">
                         </div>
@@ -1548,7 +1548,7 @@
                     </div>
 
                     <!-- 4 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-1.svg" alt="" draggable="false">
                         </div>
@@ -1572,7 +1572,7 @@
                     </div>
 
                     <!-- 5 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-2.svg" alt="" draggable="false">
                         </div>
@@ -1596,7 +1596,7 @@
                     </div>
 
                     <!-- 6 -->
-                    <div class="card-feedback text-center p-30 col-1 col-md-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
+                    <div class="card-feedback text-center p-30 col-1 col-md-2-gap-2 col-xl-3 d-flex flex-direction-column align-items-center border border-1 border-gray-lighter rounded-circle-10">
                         <div class="border border-1 border-gray-lighter rounded-circle-50">
                             <img class="px-4 pt-4 pb-1" src="assets/img/main/people/feedback-3.svg" alt="" draggable="false">
                         </div>
@@ -1623,7 +1623,7 @@
         </div>
 
         <!-- Instagram -->
-        <div class="px-20 mt-56 mt-xl-107 width-xxl-141 mx-auto">
+        <div class="px-20 mt-56 mt-xl-104 width-xxl-141 mx-auto">
             <!-- Title -->
             <div class="text-center">
                 <h1 class="fs-36 fw-400 fs-xl-45">Shop by Gram</h1>
@@ -1724,11 +1724,202 @@
 
             </div>
         </div>
-
    </main>
 
    <!-- footer -->
-   <footer class="mb-200"></footer>
+   <footer class="mb-200 d-md-flex flex-md-wrap px-20 mt-58 mt-xl-40 width-xxl-141 mx-auto">
+        <!-- About -->
+        <div class="col-md-2 col-xl-4-33pct mb-30">
+            <div class="pt-md-20 mb-xl-5">
+                <img src="assets/img/header/Logo.svg" alt="">
+            </div>
+            <p class="mt-xl-32 mt-28 fs-16 fw-400 color-gray-dark">268 St, South New York/NY 98944, United States.</p>
+            <div class="mt-12">
+                <a class="hover-black fs-16 fw-400 color-gray-dark" href="">+222-1800-2628</a>
+            </div>
+            <div class="mt-12">
+                <a class="hover-black fs-16 fw-400 color-gray-dark" href="">blueskytechcompany@gmail.com</a>
+            </div>
+            <ul class="mt-27 d-flex gap-10">
+                <!-- Ig -->
+                <li>
+                    <a class="hover-black" href="">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#555555"/>
+                            <path d="M21.6 12H14.4C13.0745 12 12 13.0745 12 14.4V21.6C12 22.9255 13.0745 24 14.4 24H21.6C22.9255 24 24 22.9255 24 21.6V14.4C24.0001 13.0745 22.9255 12 21.6 12ZM20.4 13.8H22.2V15.6H20.4V13.8ZM18 15.6001C19.3255 15.6001 20.4 16.6746 20.4 18.0001C20.4 19.3255 19.3255 20.4 18 20.4C16.6745 20.4 15.6 19.3255 15.6 18.0001C15.6 16.6746 16.6745 15.6001 18 15.6001ZM22.8 21.6001C22.8 22.2628 22.2627 22.8001 21.6 22.8001H14.4C13.7373 22.8001 13.2 22.2628 13.2 21.6001V17.4H14.46C14.0996 19.3553 15.3926 21.2325 17.3479 21.5929C19.3032 21.9533 21.1804 20.6603 21.5408 18.705C21.5836 18.4725 21.6035 18.2364 21.6 18.0001C21.597 17.7987 21.577 17.598 21.54 17.4001H22.8V21.6001H22.8Z" fill="#555555"/>
+                        </svg>                               
+                    </a>
+                </li>
+
+                <!-- TikTok -->
+                <li>
+                    <a class="hover-black" href="">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#555555"/>
+                            <path d="M16.9886 24C15.9308 24 14.9163 23.5966 14.1682 22.8785C13.4202 22.1604 13 21.1864 13 20.1709C13 19.1554 13.4202 18.1814 14.1682 17.4633C14.9163 16.7452 15.9308 16.3418 16.9886 16.3418H17.9625V18.2105H16.9886C16.5841 18.2105 16.1886 18.3257 15.8522 18.5415C15.5159 18.7572 15.2537 19.0639 15.0989 19.4227C14.9441 19.7815 14.9036 20.1764 14.9825 20.5573C15.0614 20.9382 15.2562 21.2881 15.5423 21.5627C15.8283 21.8373 16.1928 22.0243 16.5896 22.1001C16.9864 22.1759 17.3976 22.137 17.7714 21.9883C18.1452 21.8397 18.4646 21.588 18.6894 21.2651C18.9141 20.9422 19.0341 20.5626 19.0341 20.1742V12H20.9807V12.9338C20.9807 13.4546 21.1962 13.9541 21.5798 14.3223C21.9634 14.6906 22.4836 14.8975 23.0261 14.8975H24V16.7629H23.0193C22.2984 16.7639 21.591 16.5753 20.9739 16.2175V20.1709C20.973 21.1856 20.5529 22.1586 19.8058 22.8764C19.0587 23.5942 18.0456 23.9983 16.9886 24Z" fill="#555555"/>
+                        </svg>                            
+                    </a>
+                </li>
+
+                <!-- YouTube -->
+                <li>
+                    <a class="hover-black" href="">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#555555"/>
+                            <path d="M24.9882 14.5648C24.8236 13.9529 24.3412 13.4706 23.7294 13.3058C22.6117 13 18.1411 13 18.1411 13C18.1411 13 13.6706 13 12.5529 13.2942C11.9529 13.4588 11.4587 13.953 11.2941 14.5648C11 15.6823 11 18 11 18C11 18 11 20.3294 11.2941 21.4352C11.4589 22.047 11.9411 22.5294 12.553 22.6941C13.6823 23 18.1412 23 18.1412 23C18.1412 23 22.6117 23 23.7294 22.7058C24.3413 22.5411 24.8236 22.0588 24.9884 21.447C25.2824 20.3294 25.2824 18.0118 25.2824 18.0118C25.2824 18.0118 25.2942 15.6823 24.9882 14.5648ZM16.7177 20.1412V15.8588L20.4353 18L16.7177 20.1412Z" fill="#555555"/>
+                        </svg>                            
+                    </a>
+                </li>
+
+                <!-- Twitter -->
+                <li>
+                    <a class="hover-black" href="">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#555555"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9184 12H12.066L16.5298 18.6281L12 24H13.5877L17.2347 19.6747L20.1476 24H24L19.3764 17.1347L23.7059 12H22.1183L18.6714 16.0879L15.9184 12ZM17.4993 17.9239L14.2821 13.2286H15.2134L17.9508 17.2237L18.3878 17.8614L21.7755 22.8054H20.8442L17.9793 18.6242L17.4993 17.9239Z" fill="#555555"/>
+                        </svg>                            
+                    </a>
+                </li>
+
+                <!-- Facebook -->
+                <li>
+                    <a class="hover-black" href="">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#555555"/>
+                            <path d="M16.3334 14.6667V16H15V18H16.3334V24H19V18H20.7734L21 16H19V14.8334C19 14.2934 19.0533 14.0067 19.8866 14.0067H21V12H19.2134C17.08 12.0001 16.3334 13 16.3334 14.6667Z" fill="#555555"/>
+                        </svg>                            
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Hot categories -->
+        <div class="col-md-2 col-xl-4-17pct mt-xl-10 pl-xl-15">
+            <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-20 pb-18 border-top border-1 border-gray-lighter" onclick="toggleMenu('categories')">
+                <h3 class="fs-14 fw-600">
+                    HOT CATEGORIES
+                </h3>
+                <span class="d-md-none footer-icon fs-23 fw-300 color-gray-dark">+</span>
+            </div>
+
+            <ul id="categories" class="mt-xl-12 footer-list footer-list-md active">
+                <li class="mb-22 hover-right-5">
+                    <a class=" fs-16 fw-400 color-gray-dark hover-black" href="">Special Offers</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Performance</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">T-shirts</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Underwear</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Top Brands</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Online Exclusive</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Customer Service -->
+        <div class="col-md-2 col-xl-4-17pct mt-xl-10 pl-xl-15">
+            <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-18 pb-17 border-top border-1 border-gray-lighter" onclick="toggleMenu('customer')">
+                <h3 class="fs-14 fw-600">
+                    CUSTOMER SERVICE               
+                </h3>
+                <span class="d-md-none footer-icon fs-23 fw-300 color-gray-dark">-</span>
+            </div>
+            <ul id="customer" class="mt-xl-12 footer-list footer-list-md active">
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Privacy Policy</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Refund Policy</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Shipping & Return</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Term & Conditions</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Advanced Search</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Theme FAQs</a>
+                </li>
+                <li class="mb-22 hover-right-5">
+                    <a class="fs-16 fw-400 color-gray-dark hover-black" href="">Store Locations</a>
+                </li>
+             </ul>
+        </div>
+
+        <!-- Newsletter -->
+        <div class="col-md-2 col-xl-4-33pct mt-xl-10 pl-xl-15">
+            <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-18 pb-12 border-top border-1 border-gray-lighter" onclick="toggleMenu('newsletter')">
+                <h3 class="fs-14 fw-600">
+                    SIGN UP TO NEWSLETTER                
+                </h3>
+                <span class="d-md-none footer-icon fs-23 fw-300 color-gray-dark">-</span>
+            </div>
+            <div id="newsletter" class="mt-xl-12 footer-list footer-list-md active">
+                <p class="mb-17 fs-16 fw-400 lh-24 color-gray-dark">Enter your email address to get $10 off your first order and free shipping. Updates information on Sales and Offers.</p>
+                <div class="mt-xl-32 d-flex gap-10">
+                    <div class="flex-grow-1 border border-1 border-gray-lighter rounded-circle-35 pt-14 pb-16 ">
+                        <input class="border-none text-center color-gray-medium" type="email" placeholder="Enter your email...">
+                    </div>
+                    <button class="px-40 btn btn-black rounded-circle-35 fs-12 fw-600">SUBSCRIBE</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="mt-65 d-flex flex-direction-column align-items-center mx-auto">
+            <ul class="d-flex gap-20">
+                <li>
+                    <a class="fs-16 fw-400" href="#!">
+                        English
+                        <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400 lh"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="fs-16 fw-400" href="#!">
+                        United States (USD $)
+                        <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400 lh" ></i>
+                    </a>
+                </li>
+            </ul>
+            <div class="mt-17">
+                <p class="fs-16 fw-400">© 2023 Umino Store. All Rights Reserved</p>
+            </div>
+            <div class="d-flex mt-16">
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg1.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg2.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg3.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg4.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg5.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg6.svg" alt="">
+                </div>
+                <div class="border border-1 border-gray-medium rounded-circle-5">
+                    <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg7.svg" alt="">
+                </div>
+            </div>
+        </div>
+   </footer>
 
    <!-- JS -->
    <script src="js/js.js"></script>
