--- a/index.html
+++ b/index.html
@@ -1871,7 +1871,7 @@
                     <p class="mb-17 fs-16 fw-400 lh-24 color-gray-dark">Enter your email address to get $10 off your first order and free shipping. Updates information on Sales and Offers.</p>
                     <div class="mt-xl-32 d-flex gap-10">
                         <div class="flex-grow-1 border border-1 border-gray-lighter rounded-circle-35 pt-14 pb-16 ">
-                            <input class="border-none text-center color-gray-medium" type="email" placeholder="Enter your email...">
+                            <input class="border-none ml-25 color-gray-medium" type="email" placeholder="Enter your email...">
                         </div>
                         <button class="px-40 btn btn-black rounded-circle-35 fs-12 fw-600">SUBSCRIBE</button>
                     </div>
@@ -1881,7 +1881,7 @@
     
         <!-- Copyright -->
         <div class="mt-65 d-flex gap-17 flex-wrap justify-content-center justify-content-md-between">
-            <div>
+            <div class="mx-auto">
                 <a class="fs-16 fw-400 mr-16" href="#!">
                     English
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
@@ -1891,7 +1891,7 @@
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
                 </a>
             </div>
-            <div>
+            <div class="mx-auto">
                 <p class="fs-16 fw-400">© 2023 Umino Store. All Rights Reserved</p>
             </div>
             <div class="d-flex gap-7 mx-auto mx-lg-0 justify-content-xl-end">
