--- a/index.html
+++ b/index.html
@@ -1881,7 +1881,7 @@
     
         <!-- Copyright -->
         <div class="mt-65 d-flex gap-17 flex-wrap justify-content-center justify-content-md-between">
-            <div class="mx-auto">
+            <div class="mx-auto mx-lg-0">
                 <a class="fs-16 fw-400 mr-16" href="#!">
                     English
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
