--- a/index.html
+++ b/index.html
@@ -98,42 +98,42 @@
          <div class="flex-fill d-none d-lg-block">
             <ul class="d-flex justify-content-center gap-lg-20 gap-xxl-30">
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Home
                         <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Shop
                         <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Products
                         <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Pages
                         <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Blog
                         <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Sale
                     </a>
                 </li>
                 <li>
-                    <a class="fs-16 fw-500 lh btn-nav" href="">
+                    <a class="fs-16 fw-500 lh hover-orange-red" href="">
                         Buy Uminno!
                     </a>
                 </li>
@@ -155,8 +155,10 @@
                <img src="assets/img/header/icon/wishlist/Wishlist.svg" alt="Wishlist">
             </a>
             <div>
-                <div id="cartIcon" class="cursor-pointer pr-12 pr-lg-10">
+                <!-- Icon Cart -->
+                <div id="cartIcon" class="cursor-pointer pr-12 pr-lg-10 relative">
                     <img src="assets/img/header/icon/cart/Cart.svg" alt="Cart">
+                    <span id="cartCount" class="absolute bottom-55pct right-5pct bg-orange-red color-white fs-10 fw-400 rounded-circle-50 py-5 px-6">0</span>
                 </div>
 
                 <!-- Overlay Cart -->
