--- a/index.html
+++ b/index.html
@@ -99,26 +99,22 @@
             <ul class="d-flex justify-content-center gap-lg-20 gap-xxl-30">
                 <li>
                     <a class="fs-16 fw-500 lh hover-orange-red" href="">
-                        Home
-                        <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
+                        Home <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
                     <a class="fs-16 fw-500 lh hover-orange-red" href="">
-                        Shop
-                        <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
+                        Shop <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
                     <a class="fs-16 fw-500 lh hover-orange-red" href="">
-                        Products
-                        <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
+                        Products <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
                     <a class="fs-16 fw-500 lh hover-orange-red" href="">
-                        Pages
-                        <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
+                        Pages <i class="fa fa-solid fa-angle-down ml-5 fs-14 fw-400 lh"></i>
                     </a>
                 </li>
                 <li>
@@ -154,6 +150,8 @@
             <a class="d-none d-lg-block" href="">
                <img src="assets/img/header/icon/wishlist/Wishlist.svg" alt="Wishlist">
             </a>
+
+            <!-- Cart -->
             <div>
                 <!-- Icon Cart -->
                 <div id="cartIcon" class="cursor-pointer pr-12 pr-lg-10 relative">
@@ -175,6 +173,7 @@
                             </svg>                                
                         </span>
                     </div>
+                    
                     <!-- Shipping -->
                     <div class="px-30 pt-35 pb-22 bg-white-smoke">
                         <div class="progress-bar relative bg-gray-light rounded-circle-10">
@@ -191,6 +190,7 @@
                         </div>
                         <p class="fs-14 fw-400 mt-18">Spend $120 more and get <span class="fs-14 fw-600 color-orange-red">FREE SHIPPING!</span></p>
                     </div>
+
                     <!-- Timer Checkout -->
                     <div class="px-30 pt-19 pb-12">
                         <p class="fs-14 fw-400">
@@ -2019,17 +2019,17 @@
         <!-- Copyright -->
         <div class="mt-35 d-flex gap-17 flex-wrap justify-content-center justify-content-md-between">
             <div class="mx-auto mx-lg-0">
-                <a class="fs-16 fw-400 mr-16" href="#!">
+                <a class="text-nowrap fs-16 fw-400 mr-16" href="#!">
                     English
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
                 </a>
-                <a class="fs-16 fw-400" href="#!">
+                <a class="text-nowrap fs-16 fw-400" href="#!">
                     United States (USD $)
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
                 </a>
             </div>
             <div class="mx-auto">
-                <p class="fs-16 fw-400">© 2023 Umino Store. All Rights Reserved</p>
+                <p class="text-nowrap fs-16 fw-400">© 2023 Umino Store. All Rights Reserved</p>
             </div>
             <div class="d-flex gap-7 mx-auto mx-lg-0 justify-content-xl-end">
                 <div class="border border-1 border-gray-medium rounded-circle-5">
