--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             </div>
 
                             <!-- Sub Home -->
-                            <div id="subHomeBlock" class="sub-home fixed top-0 z-index-102 h-100vh bg-white">
-                                <div class="bg-white-smoke d-flex align-items-end px-30 py-20">
+                            <div id="subHomeBlock" class="sub-home fixed top-0 left-0 z-index-102 h-100vh bg-white">
+                                <div class="bg-white-smoke d-flex px-30 py-20">
                                     <span id="subHomeBack" class="pr-21">
                                         <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M7.08594 10.5742C7.25521 10.7435 7.33984 10.9453 7.33984 11.1797C7.33984 11.401 7.25521 11.5898 7.08594 11.7461C6.92969 11.9154 6.73438 12 6.5 12C6.26562 12 6.07031 11.9154 5.91406 11.7461L0.914062 6.74609C0.744792 6.58984 0.660156 6.40104 0.660156 6.17969C0.660156 5.94531 0.744792 5.74349 0.914062 5.57422L5.91406 0.574219C6.07031 0.417969 6.26562 0.339844 6.5 0.339844C6.73438 0.339844 6.92969 0.417969 7.08594 0.574219C7.25521 0.74349 7.33984 0.945312 7.33984 1.17969C7.33984 1.40104 7.25521 1.58984 7.08594 1.74609L2.67188 6.16016L7.08594 10.5742Z" fill="#111111"/>
@@ -138,43 +138,44 @@
 
                                 <div class="px-30">
                                     <ul>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Main Demo</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Skincare</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Simple Modern</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">TikTok Fashion</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Trendy Style</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Minimal Clothings</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Men’s Luxury</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Clothing Store</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Categories Men’s</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Unique Watches</a>
                                         </li>
-                                        <li class="py-20">
+                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
                                             <a class="fs-16 fw-400" href="">Underwear</a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
+
                         <!-- Shop -->
                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
                             <div id="subShop" class="cursor-pointer d-flex align-items-center">
@@ -184,8 +185,105 @@
                                         <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
                                     </svg>                                    
                                 </span>
-                            </div> 
+                            </div>
+
+                            <!-- Sub Shop -->
+                            <div id="subShopBlock" class="sub-shop d-flex flex-direction-column fixed top-0 left-0 z-index-102 h-100vh bg-white">
+                                <div class="bg-white-smoke d-flex px-30 py-20">
+                                    <span id="subShopBack" class="pr-21">
+                                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.08594 10.5742C7.25521 10.7435 7.33984 10.9453 7.33984 11.1797C7.33984 11.401 7.25521 11.5898 7.08594 11.7461C6.92969 11.9154 6.73438 12 6.5 12C6.26562 12 6.07031 11.9154 5.91406 11.7461L0.914062 6.74609C0.744792 6.58984 0.660156 6.40104 0.660156 6.17969C0.660156 5.94531 0.744792 5.74349 0.914062 5.57422L5.91406 0.574219C6.07031 0.417969 6.26562 0.339844 6.5 0.339844C6.73438 0.339844 6.92969 0.417969 7.08594 0.574219C7.25521 0.74349 7.33984 0.945312 7.33984 1.17969C7.33984 1.40104 7.25521 1.58984 7.08594 1.74609L2.67188 6.16016L7.08594 10.5742Z" fill="#111111"/>
+                                        </svg>      
+                                    </span>
+                                    <h3 class="flex-grow-1 fs-16 fw-500">Shop</h3>
+                                    <span id="closeSubShop" class="pr-4">
+                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M0.414062 1.74609C0.244792 1.58984 0.160156 1.40104 0.160156 1.17969C0.160156 0.945312 0.244792 0.74349 0.414062 0.574219C0.570312 0.417969 0.765625 0.339844 1 0.339844C1.23438 0.339844 1.42969 0.417969 1.58594 0.574219L6 4.98828L10.4141 0.574219C10.5703 0.417969 10.7656 0.339844 11 0.339844C11.2344 0.339844 11.4297 0.417969 11.5859 0.574219C11.7552 0.74349 11.8398 0.945312 11.8398 1.17969C11.8398 1.40104 11.7552 1.58984 11.5859 1.74609L7.17188 6.16016L11.5859 10.5742C11.7552 10.7435 11.8398 10.9453 11.8398 11.1797C11.8398 11.401 11.7552 11.5898 11.5859 11.7461C11.4297 11.9154 11.2344 12 11 12C10.7656 12 10.5703 11.9154 10.4141 11.7461L6 7.35156L1.58594 11.7461C1.42969 11.9154 1.23438 12 1 12C0.765625 12 0.570312 11.9154 0.414062 11.7461C0.244792 11.5898 0.160156 11.401 0.160156 11.1797C0.160156 10.9453 0.244792 10.7435 0.414062 10.5742L4.82812 6.16016L0.414062 1.74609Z" fill="#555555"/>
+                                        </svg>                                            
+                                    </span>
+                                </div>
+
+                                <div class="px-30 overflow-y flex-grow-1">
+                                    <ul>
+                                        <!-- Shop Layout -->
+                                        <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
+                                            <div id="subShopLayout" class="cursor-pointer d-flex align-items-center">
+                                                <span class="flex-grow-1 fs-16 fw-500" href="">Shop Layout</span>
+                                                <span>
+                                                    <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
+                                                    </svg>                                    
+                                                </span>
+                                            </div>
+
+                                            <!-- Sub Shop Layout -->
+                                            <div id="subShopLayoutBlock" class="sub-shop-layout fixed top-0 z-index-102 h-100vh bg-white">
+                                                <div class="bg-white-smoke d-flex px-30 py-20">
+                                                    <span id="subShopLayoutBack" class="pr-21">
+                                                        <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M7.08594 10.5742C7.25521 10.7435 7.33984 10.9453 7.33984 11.1797C7.33984 11.401 7.25521 11.5898 7.08594 11.7461C6.92969 11.9154 6.73438 12 6.5 12C6.26562 12 6.07031 11.9154 5.91406 11.7461L0.914062 6.74609C0.744792 6.58984 0.660156 6.40104 0.660156 6.17969C0.660156 5.94531 0.744792 5.74349 0.914062 5.57422L5.91406 0.574219C6.07031 0.417969 6.26562 0.339844 6.5 0.339844C6.73438 0.339844 6.92969 0.417969 7.08594 0.574219C7.25521 0.74349 7.33984 0.945312 7.33984 1.17969C7.33984 1.40104 7.25521 1.58984 7.08594 1.74609L2.67188 6.16016L7.08594 10.5742Z" fill="#111111"/>
+                                                        </svg>      
+                                                    </span>
+                                                    <h3 class="flex-grow-1 fs-16 fw-500">Shop Layout</h3>
+                                                    <span id="closeSubShopLayout" class="pr-4">
+                                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M0.414062 1.74609C0.244792 1.58984 0.160156 1.40104 0.160156 1.17969C0.160156 0.945312 0.244792 0.74349 0.414062 0.574219C0.570312 0.417969 0.765625 0.339844 1 0.339844C1.23438 0.339844 1.42969 0.417969 1.58594 0.574219L6 4.98828L10.4141 0.574219C10.5703 0.417969 10.7656 0.339844 11 0.339844C11.2344 0.339844 11.4297 0.417969 11.5859 0.574219C11.7552 0.74349 11.8398 0.945312 11.8398 1.17969C11.8398 1.40104 11.7552 1.58984 11.5859 1.74609L7.17188 6.16016L11.5859 10.5742C11.7552 10.7435 11.8398 10.9453 11.8398 11.1797C11.8398 11.401 11.7552 11.5898 11.5859 11.7461C11.4297 11.9154 11.2344 12 11 12C10.7656 12 10.5703 11.9154 10.4141 11.7461L6 7.35156L1.58594 11.7461C1.42969 11.9154 1.23438 12 1 12C0.765625 12 0.570312 11.9154 0.414062 11.7461C0.244792 11.5898 0.160156 11.401 0.160156 11.1797C0.160156 10.9453 0.244792 10.7435 0.414062 10.5742L4.82812 6.16016L0.414062 1.74609Z" fill="#555555"/>
+                                                        </svg>                                            
+                                                    </span>
+                                                </div>
+
+                                                <div class="px-30">
+                                                    <ul>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Filter left sidebar</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Filter right sidebar</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Canvas sidebar</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Dropdown sidebar</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Grid 2 columns</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">Grid 3 columns</a>
+                                                        </li>
+                                                        <li class="py-20 border-bottom border-1 border-gray-lighter">
+                                                            <a class="fs-16 fw-400" href="">List view</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="pt-20 pb-18">
+                                            <div class="cursor-pointer d-flex align-items-center">
+                                                <span class="flex-grow-1 fs-16 fw-500" href="">Shop Page</span>
+                                                <span>
+                                                    <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
+                                                    </svg>                                    
+                                                </span>
+                                            </div>
+                                        </li>
+                                    </ul>
+
+                                    <div class="relative pb-20">
+                                        <img class="img rounded-circle-5" src="assets/img/header/menu-mobile/Shop/shop1.jpg" alt="">
+                                        <button class=" px-100 py-16 rounded-circle-35 absolute bottom-25 left-center btn btn-white fs-16 fw-500">Underwear</button>
+                                    </div>
+
+                                    <div class="relative pb-20">
+                                        <img class="img rounded-circle-5" src="assets/img/header/menu-mobile/Shop/shop2.jpg" alt="">
+                                        <button class=" px-100 py-16 rounded-circle-35 absolute bottom-25 left-center btn btn-white fs-16 fw-500">Underwear</button>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
+
                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter d-flex align-items-center">
                             <a class="flex-grow-1 fs-16 fw-500" href="">Products</a>
                             <span>
