--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                         </svg>                                            
                                     </span>
                                 </div>
-
+                                <!--  -->
                                 <div class="px-30 overflow-y flex-grow-1">
                                     <ul>
                                         <!-- Shop Layout -->
@@ -218,7 +218,7 @@
 
                                             <!-- Sub Shop Layout -->
                                             <div id="subShopLayoutBlock" class="sub-shop-layout fixed top-0 z-index-102 h-100vh bg-white">
-                                                <div class="bg-white-smoke d-flex px-30 py-20">
+                                                <div class="bg-white-smoke d-flex pr-30 py-20">
                                                     <span id="subShopLayoutBack" class="pr-21">
                                                         <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M7.08594 10.5742C7.25521 10.7435 7.33984 10.9453 7.33984 11.1797C7.33984 11.401 7.25521 11.5898 7.08594 11.7461C6.92969 11.9154 6.73438 12 6.5 12C6.26562 12 6.07031 11.9154 5.91406 11.7461L0.914062 6.74609C0.744792 6.58984 0.660156 6.40104 0.660156 6.17969C0.660156 5.94531 0.744792 5.74349 0.914062 5.57422L5.91406 0.574219C6.07031 0.417969 6.26562 0.339844 6.5 0.339844C6.73438 0.339844 6.92969 0.417969 7.08594 0.574219C7.25521 0.74349 7.33984 0.945312 7.33984 1.17969C7.33984 1.40104 7.25521 1.58984 7.08594 1.74609L2.67188 6.16016L7.08594 10.5742Z" fill="#111111"/>
@@ -232,7 +232,7 @@
                                                     </span>
                                                 </div>
 
-                                                <div class="px-30">
+                                                <div class="pr-30">
                                                     <ul>
                                                         <li class="py-20 border-bottom border-1 border-gray-lighter">
                                                             <a class="fs-16 fw-400" href="">Filter left sidebar</a>
@@ -259,6 +259,8 @@
                                                 </div>
                                             </div>
                                         </li>
+
+                                        <!-- Shop Page -->
                                         <li class="pt-20 pb-18">
                                             <div class="cursor-pointer d-flex align-items-center">
                                                 <span class="flex-grow-1 fs-16 fw-500" href="">Shop Page</span>
