--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <!-- Shop -->
                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
                             <div id="subShop" class="cursor-pointer d-flex align-items-center">
-                                <span class="flex-grow-1 fs-16 fw-500" href="">Shop</span>
+                                <span class="flex-grow-1 fs-16 fw-500">Shop</span>
                                 <span>
                                     <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
@@ -189,6 +189,7 @@
 
                             <!-- Sub Shop -->
                             <div id="subShopBlock" class="sub-shop d-flex flex-direction-column fixed top-0 left-0 z-index-102 h-100vh bg-white">
+                                <!-- Title -->
                                 <div class="bg-white-smoke d-flex px-30 py-20">
                                     <span id="subShopBack" class="pr-21">
                                         <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -202,11 +203,14 @@
                                         </svg>                                            
                                     </span>
                                 </div>
-                                <!--  -->
+
+                                <!-- Main Sub Shop -->
                                 <div class="px-30 overflow-y flex-grow-1">
+                                    <!--  -->
                                     <ul>
                                         <!-- Shop Layout -->
                                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
+                                            <!-- Title -->
                                             <div id="subShopLayout" class="cursor-pointer d-flex align-items-center">
                                                 <span class="flex-grow-1 fs-16 fw-500" href="">Shop Layout</span>
                                                 <span>
@@ -217,8 +221,8 @@
                                             </div>
 
                                             <!-- Sub Shop Layout -->
-                                            <div id="subShopLayoutBlock" class="sub-shop-layout fixed top-0 z-index-102 h-100vh bg-white">
-                                                <div class="bg-white-smoke d-flex pr-30 py-20">
+                                            <div id="subShopLayoutBlock" class="sub-shop-layout fixed top-0 left-0 z-index-102 h-100vh bg-white">
+                                                <div class="bg-white-smoke d-flex px-30 py-20">
                                                     <span id="subShopLayoutBack" class="pr-21">
                                                         <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M7.08594 10.5742C7.25521 10.7435 7.33984 10.9453 7.33984 11.1797C7.33984 11.401 7.25521 11.5898 7.08594 11.7461C6.92969 11.9154 6.73438 12 6.5 12C6.26562 12 6.07031 11.9154 5.91406 11.7461L0.914062 6.74609C0.744792 6.58984 0.660156 6.40104 0.660156 6.17969C0.660156 5.94531 0.744792 5.74349 0.914062 5.57422L5.91406 0.574219C6.07031 0.417969 6.26562 0.339844 6.5 0.339844C6.73438 0.339844 6.92969 0.417969 7.08594 0.574219C7.25521 0.74349 7.33984 0.945312 7.33984 1.17969C7.33984 1.40104 7.25521 1.58984 7.08594 1.74609L2.67188 6.16016L7.08594 10.5742Z" fill="#111111"/>
@@ -232,7 +236,7 @@
                                                     </span>
                                                 </div>
 
-                                                <div class="pr-30">
+                                                <div class="px-30">
                                                     <ul>
                                                         <li class="py-20 border-bottom border-1 border-gray-lighter">
                                                             <a class="fs-16 fw-400" href="">Filter left sidebar</a>
@@ -273,11 +277,13 @@
                                         </li>
                                     </ul>
 
+                                    <!-- Categories Mobile 1 -->
                                     <div class="relative pb-20">
                                         <img class="img rounded-circle-5" src="assets/img/header/menu-mobile/Shop/shop1.jpg" alt="">
                                         <button class=" px-100 py-16 rounded-circle-35 absolute bottom-25 left-center btn btn-white fs-16 fw-500">Underwear</button>
                                     </div>
 
+                                    <!-- Categories Mobile 2 -->
                                     <div class="relative pb-20">
                                         <img class="img rounded-circle-5" src="assets/img/header/menu-mobile/Shop/shop2.jpg" alt="">
                                         <button class=" px-100 py-16 rounded-circle-35 absolute bottom-25 left-center btn btn-white fs-16 fw-500">Underwear</button>
@@ -2544,6 +2550,8 @@
                 </div>
             </div>
         </div>
+
+        
    </footer>
 
    <!-- JS -->
