--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- button -->
             <span class="cursor-pointer fs-18 fw-400 color-white absolute right-19 top-9">
                 <svg width="12" height="11" viewBox="0 0 12 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.5" d="M0.972656 1.52148C0.820312 1.38086 0.744141 1.21094 0.744141 1.01172C0.744141 0.800781 0.820312 0.619141 0.972656 0.466797C1.11328 0.326172 1.28906 0.255859 1.5 0.255859C1.71094 0.255859 1.88672 0.326172 2.02734 0.466797L6 4.43945L9.97266 0.466797C10.1133 0.326172 10.2891 0.255859 10.5 0.255859C10.7109 0.255859 10.8867 0.326172 11.0273 0.466797C11.1797 0.619141 11.2559 0.800781 11.2559 1.01172C11.2559 1.21094 11.1797 1.38086 11.0273 1.52148L7.05469 5.49414L11.0273 9.4668C11.1797 9.61914 11.2559 9.80078 11.2559 10.0117C11.2559 10.2109 11.1797 10.3809 11.0273 10.5215C10.8867 10.6738 10.7109 10.75 10.5 10.75C10.2891 10.75 10.1133 10.6738 9.97266 10.5215L6 6.56641L2.02734 10.5215C1.88672 10.6738 1.71094 10.75 1.5 10.75C1.28906 10.75 1.11328 10.6738 0.972656 10.5215C0.820312 10.3809 0.744141 10.2109 0.744141 10.0117C0.744141 9.80078 0.820312 9.61914 0.972656 9.4668L4.94531 5.49414L0.972656 1.52148Z"fill="white" />
+                    <path opacity="0.5" d="M0.972656 1.52148C0.820312 1.38086 0.744141 1.21094 0.744141 1.01172C0.744141 0.800781 0.820312 0.619141 0.972656 0.466797C1.11328 0.326172 1.28906 0.255859 1.5 0.255859C1.71094 0.255859 1.88672 0.326172 2.02734 0.466797L6 4.43945L9.97266 0.466797C10.1133 0.326172 10.2891 0.255859 10.5 0.255859C10.7109 0.255859 10.8867 0.326172 11.0273 0.466797C11.1797 0.619141 11.2559 0.800781 11.2559 1.01172C11.2559 1.21094 11.1797 1.38086 11.0273 1.52148L7.05469 5.49414L11.0273 9.4668C11.1797 9.61914 11.2559 9.80078 11.2559 10.0117C11.2559 10.2109 11.1797 10.3809 11.0273 10.5215C10.8867 10.6738 10.7109 10.75 10.5 10.75C10.2891 10.75 10.1133 10.6738 9.97266 10.5215L6 6.56641L2.02734 10.5215C1.88672 10.6738 1.71094 10.75 1.5 10.75C1.28906 10.75 1.11328 10.6738 0.972656 10.5215C0.820312 10.3809 0.744141 10.2109 0.744141 10.0117C0.744141 9.80078 0.820312 9.61914 0.972656 9.4668L4.94531 5.49414L0.972656 1.52148Z" fill="white" />
                 </svg>
             </span>
         </div>
@@ -112,7 +112,7 @@
                         <!-- Home -->
                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
                             <div id="subHome" class="cursor-pointer d-flex align-items-center">
-                                <span class="flex-grow-1 fs-16 fw-500" href="">Home</span>
+                                <span class="flex-grow-1 fs-16 fw-500">Home</span>
                                 <span>
                                     <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
@@ -212,7 +212,7 @@
                                         <li class="pt-20 pb-18 border-bottom border-1 border-gray-lighter">
                                             <!-- Title -->
                                             <div id="subShopLayout" class="cursor-pointer d-flex align-items-center">
-                                                <span class="flex-grow-1 fs-16 fw-500" href="">Shop Layout</span>
+                                                <span class="flex-grow-1 fs-16 fw-500">Shop Layout</span>
                                                 <span>
                                                     <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
@@ -267,7 +267,7 @@
                                         <!-- Shop Page -->
                                         <li class="pt-20 pb-18">
                                             <div class="cursor-pointer d-flex align-items-center">
-                                                <span class="flex-grow-1 fs-16 fw-500" href="">Shop Page</span>
+                                                <span class="flex-grow-1 fs-16 fw-500">Shop Page</span>
                                                 <span>
                                                     <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M1.27734 11.0215C1.13672 11.1738 0.960938 11.25 0.75 11.25C0.539062 11.25 0.363281 11.1738 0.222656 11.0215C0.0703125 10.8809 -0.00585938 10.7109 -0.00585938 10.5117C-0.00585938 10.3008 0.0703125 10.1191 0.222656 9.9668L4.19531 5.99414L0.222656 2.02148C0.0703125 1.88086 -0.00585938 1.71094 -0.00585938 1.51172C-0.00585938 1.30078 0.0703125 1.11914 0.222656 0.966797C0.363281 0.826172 0.539062 0.755859 0.75 0.755859C0.960938 0.755859 1.13672 0.826172 1.27734 0.966797L5.77734 5.4668C5.92969 5.61914 6.00586 5.80078 6.00586 6.01172C6.00586 6.21094 5.92969 6.38086 5.77734 6.52148L1.27734 11.0215Z" fill="#111111"/>
@@ -430,7 +430,7 @@
 
         <!-- Logo -->
         <div class="box-border col-lg-25pct col-33pct d-flex justify-content-center justify-content-lg-start">
-            <a href="\">
+            <a href="">
                <img class="d-block" src="assets/img/header/Logo.svg" alt="Logo">
             </a>
         </div>
@@ -645,7 +645,7 @@
                <img src="./assets/img/header/icon/login/Login.svg" alt="Login">
             </a>
             <a class="d-none d-lg-block" href="">
-               <img src="assets/img/header/icon/recently viewed/Recently viewed.svg" alt="Recently viewed">
+               <img src="assets/img/header/icon/recentlyviewed/Recentlyviewed.svg" alt="Recently viewed">
             </a>
             <a class="d-none d-lg-block" href="">
                <img src="assets/img/header/icon/wishlist/Wishlist.svg" alt="Wishlist">
